samples/_failures_safe/1761451799_cf1155_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78a6f74f.c: In function ‘main’:
./samples/SAFE/__tmp_78a6f74f.c:168:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  168 |     size_t len
      |     ^~~~~~
./samples/SAFE/__tmp_78a6f74f.c:168:5: error: expected declaration or statement at end of input
